--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -1,9 +1,14 @@
-/* Here we can set styles for this lab page that we don't want to effect others pages */
+h1 {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: solid 1px #888;
+  background-color: #f5efa2;
+  color: #f389bb;
+  font-size: 200%; 
+}
 
-/* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
-.minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
-  }
+
+
+
+
+ 
