--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -1,9 +1,20 @@
-/* Here we can set styles for this lab page that we don't want to effect others pages */
-
-/* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
+body {
+  font-family: 'Courier New', Courier, monospace; 
+  padding: 10px;
+  margin-bottom: 10px;
+}
+title {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: solid 1px #888;
+  background-color: #f5efa2;
+  color: #f389bb;
+  font-size: 200%; 
+}
 .minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
-  }
+  padding: 10px;
+  margin-bottom: 10px;
+  border: solid 1px #ffffff;
+  background-color: #1b4733;
+}
+  
