--- a/css/site.css
+++ b/css/site.css
@@ -1,36 +1,32 @@
-/* we can use a single css file to style all the files in our wwebsite */
-
-/* you can pick your own background colors, text colors, and fonts */
-
-/* we can select an html element tag, in this case "body" will apply to the whole document */
-body {
-  background-color: #50808E;
-}
-
-/* we can have rules apply to multiple elements at the same time with commas */
-h1,h2,h3 {
-  font-family: sans-serif;
-}
-
-/* and we can have rules that overlap other rules, both take effect */
-h1 {
-  letter-spacing: 5px;
-  word-spacing: 5px;
-  font-size: 200%;
-}
-
-/* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
-#content {
-  margin: 10px;
-  padding: 10px;
-  border: solid 1px #888;
-  background-color: #84B59F;
-}
+/* Here we can set styles for this lab page that we don't want to effect others pages */
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 .minor-section {
   padding: 10px;
   margin-bottom: 10px;
-  border: solid 1px #888;
-  background-color: #A3C9A8;
+  border: solid 1px #9ce2ab;
+  background-color: #35a47d;
+}
+#content {
+  margin: 10px;
+  padding: 10px;
+  border: solid 1px #687bb5;
+  background-color: #bfa7ed;
+}
+#Backround {
+  margin: 10px;
+  padding: 10px;
+  border: solid 1px #286c5b;
+  background-color: #4f84b5;
+}
+.text p {
+  display: inline-block;
+  max-width: 60%;
+  margin: 3px;
+  padding: 5px 10px;
+  border-radius: 15px;
+  background-color: rgb(249, 133, 133);
+  color: rgb(125, 32, 32);
+  font-family: sans-serif;
+  font-size: 0.8em;
 }
